@@ -5,6 +5,7 @@
 - SSH default path for private key(~/.ssh/id_rsa) and for public(~/.ssh/id_rsa.pub)
 - TTL calculate for key
 - Redis driver code optimization
+- Fix crash lined with double-clicked in settings dialog
 
 0.7.4 / Jule 29, 2015
 [Alexandr Topilski]
